[tool.poetry]
name = "module_2"
version = "0.1.0"
description = ""
authors = ["pranu09 <pranavbapte72@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^5.0.4"
black = "^22.6.0"
isort = "^5.10.1"
bandit = "^1.7.4"
safety = "^2.1.1"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
